ui/apps/io.ox/search/style.less
/**
 * This work is provided under the terms of the CREATIVE COMMONS PUBLIC
 * LICENSE. This work is protected by copyright and/or other applicable
 * law. Any use of the work other than as authorized under this license
 * or copyright law is prohibited.
 *
 * http://creativecommons.org/licenses/by-nc-sa/2.5/
 *
 * © 2014 Open-Xchange Inc., Tarrytown, NY, USA. info@open-xchange.com
 *
 * @author Frank Paczynski <frank.paczynski@open-xchange.com>
 */

// io.ox/core/tk/autocomplete
.autocomplete-search {

	height: auto;
	min-height: 200px;
    min-width: 300px;
    max-height: 600px;

    .scrollable-pane {
        padding: 5px 0;
    }

    .scrollable-pane:after {
        // make sure margins/paddings are applied properly
        content: '';
    }

    .autocomplete-item {

        color: #333;
        padding: 2px 10px;

        // description: added by backend
        i {
            font-style: normal;
            color: rgba(0, 0, 0, 0.5);
        }
        &.indent {
            padding-left: 24px;
        }
        &.dropdown-header {
            padding-top: 9px;
            margin-top: 9px;
            border-top: 1px solid rgba(128, 128, 128, 0.25);
            max-width: inherit; // reset bootstrap
        }
        &.dropdown-header:first-child {
            margin-top: 0;
            border-top: 0;
        }
        &.unselectable {
            color: rgba(128, 128, 128, 0.71);
        }

        &.contacts, &.contact, &.participant, &.task_participants {
            .image {
                margin-right: 14px;
                display: inline-block;
                float: left;
                .picture(42px, 42px);
            }
            .name {
                .ellipsis();
            }
            .detail {
                color: rgba(0, 0, 0, 0.5);
                .ellipsis();
            }
        }
    }
}

// io.ox/core/tk/autocomplete: dropdown drawn inline on mobile
.autocomplete-search.mobile-dropdown {

    width: auto;
    max-width: 500px;

    margin-left: 0;
    margin-bottom: 4px;

    // adjust autocomplete defaults
    &.bottom-placement {
        border-bottom: 2px solid #fff;
    }

    // scrollable pane
    .dropdown-menu-inline {
        background-color: rgba(128, 128, 128, 0.11);
        // sytyle from bootstrap dropdown-menu
        background-color: #fff;
        border: 1px solid #ccc;
        border: 1px solid rgba(0,0,0,.15);
        border-radius: 4px;
        -webkit-box-shadow: 0 6px 12px rgba(0,0,0,.175);
        box-shadow: 0 6px 12px rgba(0,0,0,.175);
        background-clip: padding-box;
    }
    .dropdown-menu-inline:after {
        // make sure margins/paddings are applied properly
        content: '';
    }

    .autocomplete-item {
        color: #333;
        margin: 2px;

        // background-color: #eee;
        padding: 10px 0 0 10px;

        &.indent {
            padding: 10px 14px;
        }
        // description
        i {
            font-style: normal;
            color: rgba(0,0,0,.5);
        }
        // groups
        &.group {
            // background-color: white;
            font-size: 18px;
            border: none;
        }
        &.unselectable {
            color: rgba(128, 128, 128, 0.71);
        }
    }
}

@media all and (max-width: 768px), all and (max-device-width: 768px) {
    #io-ox-search-topbar.launcher {
        display: none;
    }
    #io-ox-search-topbar-icon.launcher {
        display: inline-block;
    }
    // block buttons on mobile
    .io-ox-search.window-content .facet {
        width: 100%;
        a[type="button"] {
            text-align: left;
            width: 100%;
            overflow: hidden;
            text-overflow: ellipsis;

            .remove {
                position: relative;
                padding-left: 10px;
            }
        }
    }
}

// hide/adjust default window parts
.io-ox-search-window {
    overflow: auto;
    -webkit-overflow-scrolling: touch;

    // hide head
    .window-head {
        display: none;
    }
    .window-body {
        left: 0;
    }
    // scrollable
    .window-content {
        padding: 14px;
        overflow: auto;
    }
}

// SEARCH APP STYLES
.io-ox-search {

    &.window-content {

        .row {
            margin-bottom: 14px;
            max-width: 500px;

        }

        ul, ol {
            margin-bottom: 0;
        }

        // section: applications
        .applications {
            margin-bottom: 6px;
            .caret {
                margin-left: 6px;
            }
            .application {
                display: inline-block;
                margin-bottom: 8px;
                .btn-group {
                    button {
                        border-radius: 0;
                    }
                }
            }
        }

        // section: info
        .info {
            clear: both;
            font-style: italic;
            margin: 0 15px 14px 0;
            max-width: 470px;
            background-color: #f4f8fa;
            border-color: #5bc0de;
            padding: 6px 10px;
            border-left: 3px solid #428bca;
        }

    }
}

// GLOBAL STYLES

.search-facets {
    // 6px + 8px facet (used when facets are stacked)

    .fa-caret-down {
        font-size: 16px;
    }
    margin-bottom: 6px;
    li.facet {
        margin-right: 8px;
        margin-bottom: 8px;
        max-width: 470px;
        a[type="button"] {
            background-color: #E6E6E6;
            border: transparent;
            text-align: left;
            // inherited from btn-group
            -webkit-box-shadow: none;
            box-shadow: none;
            max-height: 28px;
            max-width: 470px;
        }
        html.high-contrast & a {
            color: #333;
        }
        label>span {
            overflow: hidden;
            .ellipsis();
        }
    }

    .dropdown-toggle {
        border-radius: 0;
        .type {
            color: rgba(0,0,0,.5);
            &:after {
                // divider
                content: ':\00a0';
            }
        }
        .name:after {
            content: '\00a0';
        }
        // action icons
        .caret-container {
            float: right;
            .caret {
                // 10px minus caret border
                margin-left: 6px;
            }
        }
        .remove {
            margin-left: 10px;
            float: right;
        }
        label {
            font-weight: initial;
            overflow: hidden;
            display: inline;
            text-overflow: ellipsis;
            // overwrite bootstrap label defaults
            padding-top: 0;
            margin-bottom: 0;
        }
    }

    // reduce space between button and dropdown
    .dropdown-menu {
        margin-top: 0;
    }
}

.search-container {

    top: 45px;
    padding: 10px;
    .overflow-x(visible);
    .overflow-y(auto);

    .search-facets {
        padding-left: 0;
        li.facet {
            // border: 1px solid red;
            width: 100%;
            margin: 0 0 7px 0;
            & > a[type="button"] {
                width: 100%;
                max-height: initial;
                // 13px for a vertical alignment with search toolbar
                padding: 10px 13px;
            }
            label {
                font-weight: bold;
                display: block;
                text-align: left;
                i, .type {
                    font-weight: normal;
                    font-style: normal;
                    color: rgba(0, 0, 0, 0.5);
                }
            }
        }

        .timefacet {
            .input-daterange {
                height: 24px;
                overflow: hidden;
                .type {
                    padding-bottom: 4px;
                }
                .input {
                    height: '24px';
                    min-width: '90px';
                }
                .input-group-addon {
                    height: 24px;
                    padding: 0 8px;
                }
            }
        }
    }

    a[data-action="close"], a[data-action="toggle-adv"] {
        margin-bottom: 8px;
        margin-top: 12px;
        margin-left: 12px;
        display: block;
    }

    .facet-dropdown {
        width: 100%;
        max-width: 300px;
        right: 0;
        left: auto;
    }
}

