fixed: search layout issues in dropdown
details:
- less min height to match apps with small number of facets (e.g drive)
- tweaked padding on mobile

--- a/ui/apps/io.ox/search/style.less
+++ b/ui/apps/io.ox/search/style.less
@@ -15,7 +15,7 @@
 .autocomplete-search {
 
 	height: auto;
-	min-height: 200px;
+	min-height: 100px;
     min-width: 300px;
     max-height: 600px;
 
@@ -109,10 +109,10 @@
         margin: 2px;
 
         // background-color: #eee;
-        padding: 10px 0 0 10px;
+        padding: 5px 0 5px 10px;
 
         &.indent {
-            padding: 10px 14px;
+            padding-left: 14px;
         }
         // description
         i {
@@ -126,6 +126,7 @@
             border: none;
         }
         &.unselectable {
+            padding-bottom: 0;
             color: rgba(128, 128, 128, 0.71);
         }
     }
